try to fix dropdown collapse bug + invert plus and minus in product index

--- a/app/assets/stylesheets/components/_navbar-top.scss
+++ b/app/assets/stylesheets/components/_navbar-top.scss
@@ -2,7 +2,7 @@
 @media (max-width: 600px){
   #navbarSupportedContent{
     position: absolute;
-    // top: 70px;
+    top: 12vh;
   }
 }
 // https://stackoverflow.com/questions/48037100/bootstrap-4-navbar-collapse-issue
